--- a/Capa_Logica/Capa_Logica.csproj
+++ b/Capa_Logica/Capa_Logica.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassAuditoriaLogica.cs" />
     <Compile Include="ClassClienteLogica.cs" />
     <Compile Include="ClassEmpleadoLogica.cs" />
     <Compile Include="ClassFamiliaLogica.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="ClassPedidoLogica.cs" />
     <Compile Include="ClassProductoLogica.cs" />
     <Compile Include="ClassProveedorLogica.cs" />
+    <Compile Include="ClassReporteLogica.cs" />
     <Compile Include="ClassRolLogica.cs" />
     <Compile Include="ClassUsuarioLogica.cs" />
     <Compile Include="ClassZonaLogica.cs" />
