--- a/Capa_Presentacion/Capa_Presentacion.csproj
+++ b/Capa_Presentacion/Capa_Presentacion.csproj
@@ -287,11 +287,11 @@
     <Compile Include="EmpleadoProducto\FormVerProductosDadosDeBaja.Designer.cs">
       <DependentUpon>FormVerProductosDadosDeBaja.cs</DependentUpon>
     </Compile>
-    <Compile Include="EmpleadoProducto\FormHistorial.cs">
+    <Compile Include="EmpleadoProducto\FormHistorialCompras.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EmpleadoProducto\FormHistorial.Designer.cs">
-      <DependentUpon>FormHistorial.cs</DependentUpon>
+    <Compile Include="EmpleadoProducto\FormHistorialCompras.Designer.cs">
+      <DependentUpon>FormHistorialCompras.cs</DependentUpon>
     </Compile>
     <Compile Include="EmpleadoProducto\MDIProductos.cs">
       <SubType>Form</SubType>
@@ -445,8 +445,8 @@
     <EmbeddedResource Include="EmpleadoProducto\FormFMP.resx">
       <DependentUpon>FormFMP.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EmpleadoProducto\FormHistorial.resx">
-      <DependentUpon>FormHistorial.cs</DependentUpon>
+    <EmbeddedResource Include="EmpleadoProducto\FormHistorialCompras.resx">
+      <DependentUpon>FormHistorialCompras.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EmpleadoProducto\FormStock.resx">
       <DependentUpon>FormStock.cs</DependentUpon>
