--- a/Capa_Presentacion/App.config
+++ b/Capa_Presentacion/App.config
@@ -7,6 +7,9 @@
   <connectionStrings>
 	  <add name="ArimaERP.Properties.Settings.ArimaERPConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ArimaERP;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
 	  <add name="ArimaERPEntities" connectionString="metadata=res://*/ModelProyecto1.csdl|res://*/ModelProyecto1.ssdl|res://*/ModelProyecto1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ArimaERP;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="ConexionBackup"
+	  connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ArimaERP;Integrated Security=True"
+	  providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
